# agent-cube

./: .coverage  .cube.yml  .env.example  .eslintrc.js  .gitignore  .pre-commit-config.yaml  AGENT_CUBE.md  AGENT_CUBE_AUTOMATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  LOCAL_INSTALL_VERIFIED.md  MONDAY_COMPLETE.md  PLANNING_PROMPT_FOR_RECORDING.md  PYTHON_IMPLEMENTATION.md  QUICK_REFERENCE.md  QUICK_SETUP.md  README-PLANNING.md  README.md  RECORDING_BULLETS.md  SESSION_PREP_COMPLETE.md  SLACK_ANNOUNCEMENT.md  architecture-review-v2-34.md  cube.yaml  debug_regex.py  install.sh  jest.config.js  mock-rabbit.sh  package-lock.json  package.json  pyproject.toml  rand.md  session.html  session.md  test-task-output.md  test-task.md  test_coderabbit.py  (+5 more)
.agent-sessions/: JUDGE_1_simple-util_panel_SESSION_ID.txt  JUDGE_2_simple-util_panel_SESSION_ID.txt  JUDGE_3_simple-util_panel_SESSION_ID.txt  WRITER_A_simple-util_SESSION_ID.txt  WRITER_A_test-hello_SESSION_ID.txt  WRITER_A_test-orchestrator_SESSION_ID.txt  WRITER_B_simple-util_SESSION_ID.txt  WRITER_B_test-hello_SESSION_ID.txt  WRITER_B_test-orchestrator_SESSION_ID.txt
.github/workflows/: e2e.yml
.history/python/: cube_20251107155933.yaml  cube_20251107162523.yaml  cube_20251107162540.yaml  cube_20251107162756.yaml  cube_20251107162848.yaml  cube_20251107162906.yaml  cube_20251107172045.yaml  cube_20251107174634.yaml  cube_20251107200354.yaml
.history/scripts/: cube_20251108104026
.prompts/: feedback-04-dashboard-api-fix.md  panel-prompt-01-project-scaffold.md  panel-prompt-02-backend-api.md  panel-prompt-03-thinking-boxes.md  panel-prompt-04-dashboard.md  panel-prompt-05-task-detail-view.md  panel-prompt-06-decisions-ui.md  panel-prompt-simple-util.md  peer-review-02-backend-api.md  peer-review-04-dashboard.md  peer-review-05-task-detail-view.md  peer-review-06-decisions-ui.md  peer-review-simple-util.md  synthesis-02-backend-api.md  synthesis-04-dashboard.md  synthesis-05-task-detail-view.md  synthesis-06-decisions-ui.md  synthesis-simple-util.md  writer-prompt-01-project-scaffold.md  writer-prompt-02-backend-api.md  writer-prompt-03-thinking-boxes.md  writer-prompt-04-dashboard.md  writer-prompt-05-task-detail-view.md  writer-prompt-06-decisions-ui.md  writer-prompt-simple-util.md  writer-prompt-test-hello.md  writer-prompt-test-orchestrator.md
.prompts/decisions/: 02-backend-api-aggregated.json  (+41 more)
.stash/: web-ui.md
Formula/: cube.rb
docs/: AUDIT_TRAIL.md  CODERABBIT_JUDGE.md  FINAL_CHECKLIST.md  FUTURE_IDEAS.md  HUMAN_IN_LOOP.md  IDEAS.md  PHASE_ORGANIZATION.md  PLANNING_GUIDE.md  PRODUCTIVITY_CALC.md  PRODUCTIVITY_CLAIM.md  QUICK_START.md  README.md  REVIEW_COMPLETE.md  SESSION_OUTLINE.md  SESSION_OUTLINE_FINAL.md  SLIDE_OUTLINE.md  SLIDE_STRUCTURE_REVIEW.md  TASK_BREAKDOWN.md  V2_METRICS_SUMMARY.md  WEB_UI_ROI.md
fake-bin/: coderabbit
planning/: coderabbit-judge.md  daisyui-v5.md  tailwindcss-v4.md  third-party-versions.md  web-ui.md
python/: INSTALLATION_TEST.md  README.md  TESTING.md  TEST_RESULTS.md  cube.yaml  cube.yaml.example  requirements.txt  setup.py  test_all_commands.py  test_bash_parity.sh  test_execution.sh
scripts/: build-dist.sh  cube
src/: hello.test.ts  hello.ts
templates/: README.md  planning-doc-template.md  task-template.md
test-prompts/: task-simple-util.md  task-test-orchestrator.md  test-panel-prompt.md  test-writer-prompt.md
tests/: conftest.py  requirements.txt
web-ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
(+297 files in other folders)
