[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-cube"
version = "1.1.0"
description = "Autonomous multi-agent coding workflow orchestrator"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Aetheron", email = "dev@aetheron.ai"}]
keywords = ["ai", "llm", "automation", "cli", "agents", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "aiofiles>=23.0.0",
    "gitpython>=3.1.0",
    "typing-extensions>=4.0.0",
    "pyyaml>=6.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
cube = "cube.cli:app"

[tool.hatch.build]
sources = ["python"]

[tool.hatch.build.targets.wheel]
packages = ["python/cube"]